Fix fallout from merge